cmake_minimum_required(VERSION 3.29)
project(POO)

set(CMAKE_CXX_STANDARD 20)

include_directories("POO em C++20/ATV1/q21")

add_executable(POO

        "POO em C++20/ATV3/q8/Bruxo.h"
        "POO em C++20/ATV3/q8/CapaBruxo.h"
        "POO em C++20/ATV3/q8/Varinha.h"
        "POO em C++20/ATV3/q8/Bruxo.cpp"
        "POO em C++20/ATV3/q8/main.cpp"
        "POO em C++20/ATV3/q8/CapaBruxo.cpp"
        "POO em C++20/ATV3/q8/Varinha.cpp"
)