cmake_minimum_required(VERSION 3.29)
project(POO)

set(CMAKE_CXX_STANDARD 20)

include_directories("POO em C++20/ATV1/q21")

add_executable(POO

        "POO em C++20/ATV4/q14/Empresa.cpp"
        "POO em C++20/ATV4/q14/Empresa.h"
        "POO em C++20/ATV4/q14/PessoaJuridica.cpp"
        "POO em C++20/ATV4/q14/PessoaFisica.cpp"
        "POO em C++20/ATV4/q14/Pessoa.cpp"
        "POO em C++20/ATV4/q14/Funcionario.cpp"
        "POO em C++20/ATV4/q14/cliente.cpp"
        "POO em C++20/ATV4/q14/main.cpp"


)